--- a/lab_01_docker-compose.yml
+++ b/lab_01_docker-compose.yml
@@ -1,26 +1,52 @@
 version: '3.2'
 services:
-  lab_01:
+  lab_02_user:
     tty: true
-    container_name: lab_01
+    container_name: lab_02_user
     build:
       context: .
-      dockerfile: lab_01_dockerfile
+      dockerfile: lab_02_dockerfile
     environment:
-      - DB_HOST=lab01_postgres
+      - DB_HOST=lab02_postgres
       - DB_PORT=5432
       - DB_LOGIN=stud
       - DB_PASSWORD=stud
       - DB_DATABASE=archdb
+      - MONGO_HOST=mongodb_lab2
+      - MONGO_PORT=27017
+      - MONGO_DATABASE=arch
     depends_on:
       db:
         condition: service_healthy
     ports:
       - 8080:8080
     networks:
-      - lab01-network
+      - lab02-network
+  lab_02_pizza:
+    tty: true
+    container_name: lab_02_pizza
+    build:
+      context: .
+      dockerfile: lab_02_dockerfile
+    environment:
+      - DB_HOST=lab02_postgres
+      - DB_PORT=5432
+      - DB_LOGIN=stud
+      - DB_PASSWORD=stud
+      - DB_DATABASE=archdb
+      - MONGO_HOST=mongodb_lab2
+      - MONGO_PORT=27017
+      - MONGO_DATABASE=arch
+    depends_on:
+      db:
+        condition: service_healthy
+    ports:
+      - 8081:8080
+    networks:
+      - lab02-network
+
   db:
-    container_name: lab01_postgres
+    container_name: lab02_postgres
     image: postgres:15
     environment:
       - POSTGRES_USER=stud
@@ -28,7 +54,7 @@ services:
       - PGDATA=/data/postgres
       - POSTGRES_DB=archdb
     volumes:
-      - lab01_db:/data/postgres
+      - lab02_db:/data/postgres
     ports:
       - "5432:5432"
     restart: unless-stopped
@@ -38,13 +64,27 @@ services:
       timeout: 10s
       retries: 5
     networks:
-      - lab01-network
-  
+      - lab02-network
+  mongodb_lab2:
+    image: mongo:5.0
+    container_name: mongodb_lab2
+    restart: on-failure
+    networks:
+      - lab02-network
+    volumes:
+      - mongodbdata_lab2:/data/db
+      - ./mongo-init.sh:/docker-entrypoint-initdb.d/mongo-init.sh:ro
+    ports:
+      - '27017:27017'
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+
 volumes:
-  lab01_db:
+  lab02_db:
+  mongodbdata_lab2:
 
 
 networks:
-  lab01-network:
+  lab02-network:
     driver: "bridge"
     external: false
