--- a/hl_mai_lab_01/YAML/index.yaml
+++ b/hl_mai_lab_01/YAML/index.yaml
@@ -2,7 +2,7 @@ openapi: '3.0.0'
 info:
   version: '1.0.0'
   title: 'Arch Lab Example API'
-  description: Пример API для первого домашнего задания по курсу Архитектура программных систем
+  description: API для пользователей
 servers:
   - url: http://localhost:8080
     description: Example server
