--- a/hl_mai_lab_01/CMakeLists.txt
+++ b/hl_mai_lab_01/CMakeLists.txt
@@ -1,6 +1,7 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.5)
 
 SET (EXAMPLE_BINARY "hl_mai_lab_01")
+SET (EXAMPLE_GATEWAY "hl_mai_lab_04_gateway")
 
 find_package(OpenSSL)
 find_package(Threads)
@@ -13,27 +14,43 @@ endif()
 include_directories(${Poco_INCLUDE_DIRS})
 
 
-SET(CMAKE_CXX_STANDARD 17)
-SET(CMAKE_CXX_STANDARD_REQUIRED ON)
+set (STD_CXX "c++17")
+set (REDISCPP_FLAGS "-DREDISCPP_HEADER_ONLY=ON")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -std=${STD_CXX} ${REDISCPP_FLAGS}")
+set (CMAKE_CXX_FLAGS_RELEASE "-O3 -g0 -std=${STD_CXX} -Wall -DNDEBUG ${REDISCPP_FLAGS}")
+set (CMAKE_CXX_STANDARD 17)
+set (CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 add_executable(${EXAMPLE_BINARY} main.cpp 
                                  config/config.cpp 
                                  database/database.cpp
                                  database/user.cpp
                                  database/report.cpp
-                                 database/conference.cpp)
+                                 database/conference.cpp
+                                 database/cache.cpp)
+
+
+add_executable(${EXAMPLE_GATEWAY} api_gateway/main.cpp
+                                 config/config.cpp 
+                                 database/cache.cpp)
 
 
 target_include_directories(${EXAMPLE_BINARY} PRIVATE "${CMAKE_BINARY_DIR}")
-target_compile_options(${EXAMPLE_BINARY} PRIVATE -Wall -Wextra -pedantic -Werror )
+target_include_directories(${EXAMPLE_GATEWAY} PRIVATE "${CMAKE_BINARY_DIR}")
+                                 
 set_target_properties(${EXAMPLE_BINARY} PROPERTIES LINKER_LANGUAGE CXX)
 set_target_properties(${EXAMPLE_BINARY} PROPERTIES CXX_STANDARD 17 CXX_STANDARD_REQUIRED ON)
-
+                                 
+                                 
 target_link_libraries(${EXAMPLE_BINARY} PRIVATE 
                              ${CMAKE_THREAD_LIBS_INIT} 
                              ${Poco_LIBRARIES}
                              "PocoDataPostgreSQL")
 
+target_link_libraries(${EXAMPLE_GATEWAY} PRIVATE 
+                             ${CMAKE_THREAD_LIBS_INIT} 
+                             ${Poco_LIBRARIES})
 
 
 
